added categories to documents, tabbed navigation on detail view

--- a/templates/map/base.html
+++ b/templates/map/base.html
@@ -28,6 +28,16 @@
 				line-height: 33px;
 				margin-bottom: 43px;
 			}
+			ul {
+				font-family: Georgia;
+			}
+			h1, h2 {
+				font-family: Georgia;
+			}
+			.leaflet-container li {
+				font-size: 15px;
+				line-height: 20px;
+			}
 			html, body, #map {
 			    height: 100%;
 			}
@@ -54,6 +64,15 @@
 				background-position: center;
 			}
 
+			.feature-legend {
+				width: 400px;
+				background-color: white;
+				display: block;
+				display: none;
+				box-shadow: 0px 1px 5px #404040;
+				padding: 10px 10px 20px 10px;
+			}
+
 			.infobox-control img {
 				width: 100%;
 			}
@@ -66,6 +85,7 @@
 			}
 			.feature-attachments-list {
 				padding-left: 0;
+				overflow: auto;
 			}
 			.feature-attachments-list li {
 				width: 25%;
@@ -81,16 +101,20 @@
 				top: 120px;
 			}
 			.affix-top {
-				margin-top: 135px;
+				margin-top: 15px;
 			}
 			.affix {
 				width: 18%;
 			}
 			#fixed-nav .active {
-				font-size: 20px;
+			    font-size: 28px;
+			    margin-left: 10px;
+			    border-left: 2px solid #337ab7;
+			    width: 90%;
 			}
 			#fixed-nav li {
 				width: 100;
+				font-size: 21px;
 			}
 			.nav > li a:hover {
 				background-color: white;
