--- a/templates/map/detail.html
+++ b/templates/map/detail.html
@@ -4,42 +4,57 @@
 <div id="small_map"></div>
 <div class="container">
 	<div class="row">
-		<div class="col-xs-3" id="fixed-nav">
-			<ul data-spy="affix" data-offset-top="300" data-offset-bottom="0" class="nav nav-stacked">
-				{% for document in documents %}
-					<li><a href="#{{ document.start_year }}">{{ document.start_year }} - {{ document.end_year }}<br /><span class="small">{{ document.title }}</span></a></li>
-				{% endfor %}
-			</ul>
-		</div>
-		<div class="col-xs-7 feature-detail">
+		<div class="col-xs-3"></div>
+		<div class="col-xs-7">
 			{% if feature.name %}
 			<h1>{{ feature.name }}</h1>
 			<h2><small>{{ feature.address }}</small></h2>
 			{% else %}
 			<h1>{{ feature.address }}</h1>
 			{% endif %}
-
-			{% if not documents %}
-			<h3>Apologies!</h3>
-			<p>We don't have any information about this building</p>
-			{% endif %}
-
-
-			{% for document in documents %}
 			<div>
-				<span id="{{ document.start_year }}" class="detail_anchor"></span>
-				<h2>{{ document.title }}</h2>
-				{{ document.body|safe }}
+				<ul class="nav nav-tabs" role="tablist" id="docTabs">
+    				<li role="presentation" class="active"><a href="#history" aria-controls="home" role="tab">History</a></li>
+    				<li role="presentation"><a href="#description" aria-controls="home" role="tab">Description</a></li>
+    			</ul>
 			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-xs-3" id="fixed-nav">
+			<ul data-spy="affix" data-offset-top="300" data-offset-bottom="0" class="nav nav-stacked">
+				{% for document in histories %}
+					{% if document.start_year %}
+						<li><a href="#{{ document.title|slugify }}">{{ document.start_year }} - {{ document.end_year }}<br /><span class="small">{{ document.title }}</span></a></li>
+					{% else %}
+						<li><a href="#{{ document.title|slugify }}">{{ document.title }}</span></a></li>
+					{% endif %}
+				{% endfor %}
+			</ul>
+		</div>
+		<div class="col-xs-7 feature-detail">
+			<div class="tab-content">
+				<div role="tabpanel" class="tab-pane active" id="history">
+			{% for document in histories %}
+				
+					<div>
+						<span id="{{ document.title|slugify }}" class="detail_anchor"></span>
+						<h2>{{ document.title }}</h2>
+						{{ document.body|safe }}
+					</div>
+				
 			{% endfor %}
-
-			{% for story in stories %}
-
-			<h2>{{ story.title }}</h2>
-			<h4>{{ story.author }}</h3>
-			{{ story.body|safe }}
-
+				</div>
+				<div role="tabpanel" class="tab-pane" id="description">
+			{% for document in descriptions %}
+					<div>
+						<span id="{{ document.title|slugify }}" class="detail_anchor"></span>
+						<h2>{{ document.title }}</h2>
+						{{ document.body|safe }}
+					</div>	
 			{% endfor %}
+				</div>
+			</div>
 
 
 		</div>
@@ -57,13 +72,13 @@
 		"weight": 1,
 		"opacity": 0.8,
 		"fillOpacity": 0.8,
-	};
+	}
 
 	var oslayer = L.tileLayer('http://dev.local/tileserver.php?/index.json?/OS_OpenMap_Local_Whitechapel_Crop_Sketchy/{z}/{x}/{y}.png');
 
 	var feature = L.geoJson(feature_geojson, {
 		style: myStyle
-	});
+	})
 
 	var centre = feature.getBounds().getCenter();
 
@@ -72,7 +87,7 @@
 		zoom: 17,
 		zoomControl: false,
 		layers: [oslayer, feature],
-	});
+	})
 
 	map.dragging.disable();
 	map.touchZoom.disable();
@@ -80,6 +95,41 @@
 	map.scrollWheelZoom.disable();
 	map.keyboard.disable();
 
+	var historyNav = '{% for document in histories %}{% if document.start_year %}<li><a href="#{{ document.title|slugify }}">{{ document.start_year }} - {{ document.end_year }}<br /><span class="small">{{ document.title }}</span></a></li>{% else %}<li><a href="#{{ document.title|slugify }}">{{ document.title }}</span></a></li>{% endif %}{% endfor %}';
+
+	var descriptionNav = '{% for document in descriptions %}{% if document.start_year %}<li><a href="#{{ document.title|slugify }}">{{ document.start_year }} - {{ document.end_year }}<br /><span class="small">{{ document.title }}</span></a></li>{% else %}<li><a href="#{{ document.title|slugify }}">{{ document.title }}</span></a></li>{% endif %}{% endfor %}';
+
+	$('#docTabs a').click(function(e) {
+		e.preventDefault();
+		$(this).tab('show');
+		if ($(this).html() == 'Description') {
+			$('#fixed-nav ul').html(descriptionNav);
+		} else if ($(this).html() == 'History') {
+			$('#fixed-nav ul').html(historyNav);
+		}
+
+	})
+
+	// Enable link to tab
+	var url = document.location.toString();
+	if (url.match('#')) {
+		window.scroll(0, 0);
+		var anchor = url.split('#')[1];
+	    $('#docTabs a[href="#'+url.split('#')[1]+'"]').tab('show');
+	    if (anchor == 'description') {
+	    	$('#fixed-nav ul').html(descriptionNav);
+	    }
+	    $(document).ready(function() {
+			window.scroll(0,0);
+		})
+	}
+
+
+
+	// Change hash for page-reload
+	$('#docTabs a').on('show.bs.tab', function (e) {
+	    window.location.hash = e.target.hash;
+	})
 
 </script>
 
