tweaked feature overview pane

--- a/templates/map/legendcontrol.html
+++ b/templates/map/legendcontrol.html
@@ -1,6 +1,6 @@
-<a href="#" class="date_btn btn btn-default btn-xs">{{ feature.year_built }}</a>
-<a href="#" class="street_btn btn btn-default btn-xs">Zoom to {{ feature.street }}</a>
-<a href="#" class="all_btn btn btn-default btn-xs">Show All Buildings</a>
+<a href="#" class="date_btn btn btn-default btn-sm">{{ feature.year_built }}</a>
+<a href="#" class="street_btn btn btn-default btn-sm">Zoom to {{ feature.street }}</a>
+<a href="#" class="all_btn btn btn-default btn-sm">Show All Buildings</a>
 
 <script>
 	$('.closeThis').click(function() {
