--- a/templates/map/base.html
+++ b/templates/map/base.html
@@ -65,12 +65,16 @@
 			}
 
 			.feature-legend {
-				width: 400px;
-				background-color: white;
-				display: block;
 				display: none;
-				box-shadow: 0px 1px 5px #404040;
-				padding: 10px 10px 20px 10px;
+				position: absolute;
+				padding-left: 38px;
+				bottom: 0;
+				width: 400px;
+			}
+
+			.feature-legend .btn {
+				border: 1px solid #999;
+				line-height: 1.3;
 			}
 
 			.infobox-control img {
