--- a/templates/map/feature.html
+++ b/templates/map/feature.html
@@ -28,16 +28,17 @@
 	{% endfor %}
 	</ul>
 
-	<!--{% if documents %}
+	{% if documents %}
 		<h4>Documents</h4>
-		<ul class="feature-attachments-list">
+		<!--<ul class="feature-attachments-list">-->
+		<ul>
 		{% for document in documents %}
-			<li><a href="{% url 'detail' feature.id %}#{{ document.title|slugify }}"><span class="glyphicon glyphicon-file bigicon"></span><br />{{ document.title }}</a></li>
+			<li><a href="{% url 'detail' feature.id %}#{{ document.title|slugify }}"><!--<span class="glyphicon glyphicon-file bigicon"></span><br />-->{{ document.title }}</a></li>
 		{% endfor %}
 		</ul>
-	{% endif %}-->
+	{% endif %}
 
-	<a href="{% url 'detail' feature.id %}#description">Description</a>
+	<!--<a href="{% url 'detail' feature.id %}#description">Description</a>-->
 
 	{% if not documents %}
 	<h3>Apologies!</h3>
