Removed /media/ from tracking, moved database settings to secret_settings.py

--- a/templates/map/legendcontrol.html
+++ b/templates/map/legendcontrol.html
@@ -23,7 +23,7 @@
 	});
 
 	$('.all_btn').click(function() {
-		var jsonUrl = 'api/features/';
+		var jsonUrl = "{% url 'features' %}";
 		loadFeatures(jsonUrl);
 		$('.infobox-control').hide();
 	});
