--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -41,7 +41,7 @@ html, body, #map {
 	box-shadow: 0px 1px 5px #404040;
 	padding: 10px 10px 20px 10px;
 	display: none;
-	background-image: url("{% static 'map/img/ajax-loader.gif' %}");
+	background-image: url('../img/ajax-loader.gif');
 	background-repeat: no-repeat;
 	background-position: center;
 }
@@ -84,13 +84,13 @@ html, body, #map {
 	font-size: 28px;
 }
 .affix {
-	top: 120px;
+	top: 60px;
 }
 .affix-top {
 	margin-top: 15px;
 }
 .affix {
-	width: 18%;
+	width: 15%;
 }
 #fixed-nav .active {
     font-size: 28px;
