added authors to documents, changed overview window, still work to do on mobile views

--- a/templates/map/base.html
+++ b/templates/map/base.html
@@ -24,6 +24,11 @@
 			    <div class="navbar-header navbar-left">
       				<a class="navbar-brand" href="/">{{ title }}</a>
     			</div>
+    			<div class="collapse navbar-collapse">
+	    			<ul class="nav navbar-nav navbar-right">
+	    				<li><a href="{% url 'map.views.home' %}">Map</a></li>
+	    			</ul>
+	    		</div>
 			</div>
 		</nav>
 
