--- a/templates/whitechapel_pages/base.html
+++ b/templates/whitechapel_pages/base.html
@@ -24,6 +24,9 @@
 			    <div class="navbar-header navbar-left">
       				<a class="navbar-brand" href="/">{{ title }}</a>
     			</div>
+    			<ul class="nav navbar-nav navbar-right">
+    				<li><a href="{% url 'map.views.home' %}">Map</a></li>
+    			</ul>
 			</div>
 		</nav>
 
