--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -4,7 +4,7 @@ body {
     position: relative;
     font-family: Georgia;
 }
-p {
+p, .infobox-control p {
 	font-family: Georgia;
 	font-size: 21px;
 	line-height: 33px;
@@ -34,16 +34,27 @@ html, body, #map {
 }
 
 .infobox-control {
-	width: 400px;
-	/*min-height: 450px;*/
+	width: 300px;
+	min-height: 20px;
 	background-color: white;
 	display: block;
 	box-shadow: 0px 1px 5px #404040;
-	padding: 10px 10px 20px 10px;
+	padding: 0px 0px 5px 0px;
 	display: none;
 	background-image: url('../img/ajax-loader.gif');
 	background-repeat: no-repeat;
 	background-position: center;
+}
+
+.infobox-control p {
+	padding: 0 5px;
+	margin-bottom: 0px;
+}
+
+.close-this {
+	position: absolute;
+	top: 5px;
+	right: 5px;
 }
 
 .feature-legend {
@@ -61,6 +72,11 @@ html, body, #map {
 
 .infobox-control img {
 	width: 100%;
+}
+
+.leaflet-control-attribution {
+	font-size: 8px;
+	line-height: 10px;
 }
 
 .detail_anchor {
@@ -91,15 +107,14 @@ html, body, #map {
 }
 .affix {
 	width: 15%;
+	padding-right: 25px;
 }
 #fixed-nav .active {
     font-size: 28px;
     margin-left: 10px;
     border-left: 2px solid #337ab7;
-    width: 90%;
 }
 #fixed-nav li {
-	width: 100;
 	font-size: 21px;
 }
 .nav > li a:hover {
@@ -114,33 +129,28 @@ html, body, #map {
 	max-width: 100%;
 	height: auto;
 }
-.featured-content .col-xs-3 {
-	height: 240px;
-	margin-bottom: 20px;
-}
-.featured-content .col-xs-3 > div {
+.featured-content .col-xs-12 > div {
 	background-color: #f8f8f8; 
 	height: 100%;
 	box-shadow: 0px 1px 5px #909090;
-}.featured-content .col-xs-3 > div p {
+}.featured-content .col-xs-12 > div p {
 	font-size: 18px;
 	padding: 5px;
 	line-height: 22px;
+	min-height: 3.5em;
 }
-.featured-content .col-xs-3 > div img {
+.featured-content .col-xs-12 > div img {
 	width:100%;
-	height:180px;
 }
-.themed-content .col-xs-6 > div {
+.themed-content .col-xs-12 > div {
 	background-color: #f8f8f8; 
 	height: 100%;
 	box-shadow: 0px 1px 5px #909090;
 }
-.themed-content .col-xs-6 > div img {
+.themed-content .col-xs-12 > div img {
 	width:100%;
-	height: 238px;
 }
-.themed-content .col-xs-6 > div p {
+.themed-content .col-xs-12 > div p {
 	padding: 5px;
 }
 .jumbotron {
