--- a/templates/whitechapel_pages/index.html
+++ b/templates/whitechapel_pages/index.html
@@ -19,7 +19,6 @@
 		{{ page.body|safe }}
 	</div>
 </div>
-
 <div class="container">
 
 	<div class="row">
@@ -31,7 +30,7 @@
 
 	<div class="row featured-content">
 		{% for feature in features %}
-		<div class="col-xs-3 col-sm-3">
+		<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
 			<div>
 				<a href="{% url 'map.views.detail' feature.id %}"><img src="/media/{{ feature.thumbnail }}"></a>
 				<p><a href="{% url 'map.views.detail' feature.id %}">{{ feature.name }}</a></p>
@@ -50,10 +49,10 @@
 	<div class="row themed-content">
 		{% for category in categories %}
 		{% if category.thumbnail %}
-		<div class="col-xs-6">
+		<div class="col-xs-12 col-lg-6">
 			<div>
-				<a href="{% url 'map.views.category' category.id %}"><img src="/media/{{ category.thumbnail }}"></a>
-				<p><a href="{% url 'map.views.category' category.id %}">{{ category.name }}</a></p>
+				<a href="{% url 'map.views.category' category.name %}"><img src="/media/{{ category.thumbnail }}"></a>
+				<p><a href="{% url 'map.views.category' category.name %}">{{ category.name }}</a></p>
 			</div>
 		</div>
 		{% endif %}
