--- a/templates/map/base.html
+++ b/templates/map/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>{{ title }}</title>
+		<title>Survey of London</title>
 		<meta charset="UTF-8"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- Bootstrap -->
@@ -15,6 +15,7 @@
 		</script>
 		<script src='https://api.mapbox.com/mapbox.js/v2.2.4/mapbox.js'></script>
 		<link href='https://api.mapbox.com/mapbox.js/v2.2.4/mapbox.css' rel='stylesheet' />
+		<script type="text/javascript" src="{% static 'js/map_functions.js' %}"></script>
 		<!-- Custom styles -->
 		<link rel="stylesheet" href="{% static 'css/styles.css' %}">
 	</head>
@@ -22,10 +23,16 @@
 		<nav class="navbar navbar-default navbar-fixed-top">
 			<div class="container-fluid">
 			    <div class="navbar-header navbar-left">
-      				<a class="navbar-brand" href="/">{{ title }}</a>
+      				<a class="navbar-brand" href="/">Survey of London</a>
     			</div>
     			<div class="collapse navbar-collapse">
-	    			<ul class="nav navbar-nav navbar-right">
+	    			<form class="navbar-form navbar-right" role="search" action="{% url 'search_map' %}" type="get">
+				        <div class="form-group">
+				    	    <input type="text" class="form-control search-input" placeholder="Search Places" name="q">
+				        </div>
+				        <button type="submit" class="btn btn-default search">Submit</button>
+			      	</form>
+			      	<ul class="nav navbar-nav navbar-right">
 	    				<li><a href="{% url 'map.views.home' %}">Map</a></li>
 	    			</ul>
 	    		</div>
