--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -65,13 +65,23 @@ html, body, #map {
 	width: 400px;
 }
 
-.feature-legend .btn {
+.feature-legend .btn, .show-buildings .btn {
 	border: 1px solid #999;
 	line-height: 1.3;
 }
 
 .infobox-control img {
 	width: 100%;
+}
+
+.titlebox-control {
+	background-color: white;
+	border-radius: 3px;
+	color: rgba(0,0,0,.75);
+	border: 1px solid #999;
+	vertical-align: middle;
+	padding: 5px 10px 5px 10px;
+	display: none;
 }
 
 .leaflet-control-attribution {
@@ -180,4 +190,7 @@ html, body, #map {
 footer {
 	background-color: #f8f8f8;
 	height: 200px;
+}
+.tag {
+	margin-bottom: 3px;
 }
