--- a/templates/map/date_range.html
+++ b/templates/map/date_range.html
@@ -2,12 +2,10 @@
 {% block content %}
 		<div id="map"></div>
 
-		{% load geojson_tags %}
-		{% load staticfiles %}
-		<script type="text/javascript" src="{% static 'bower_components/bootstrap/dist/js/bootstrap.js' %}"></script>
-		<script type="text/javascript" src="{% static 'js/map_functions.js' %}"></script>
-
 		<script>
+
+			var title_box_title = 'Showing all places built between {{ build_range.lower }} and {{ build_range.upper }}';
+
 			var jsonUrl = '{% url "features_by_date_range" build_range.lower build_range.upper %}';
 			loadFeatures(jsonUrl);
 		</script>
