--- a/templates/whitechapel_pages/index.html
+++ b/templates/whitechapel_pages/index.html
@@ -13,12 +13,12 @@
 	</div>
 </div>
 
-<div class="container">
+<!--<div class="container">
 	<div class="col-xs-12">
 		<h2 class="text-center">{{ page.title }}</h2>
 		{{ page.body|safe }}
 	</div>
-</div>
+</div>-->
 <div class="container">
 
 	<div class="row">
