--- a/templates/map/detail.html
+++ b/templates/map/detail.html
@@ -21,28 +21,60 @@
 		<div class="col-md-3"></div>
 		<div class="col-xs-12 col-md-7">
 			<ul class="nav nav-tabs" role="tablist" id="docTabs">
-				<li role="presentation" class="active"><a href="#history" aria-controls="home" role="tab">History</a></li>
-				{% if descriptions %}
-				<li role="presentation"><a href="#description" aria-controls="home" role="tab">Description</a></li>
+				{% if histories %}
+				<li role="presentation" {% if not stories or not descriptions %}class="active"{% endif %}><a href="#history" aria-controls="home" role="tab">History</a></li>
 				{% endif %}
+				{% if descriptions %}
+				<li role="presentation" {% if not histories %}class="active"{% endif %}><a href="#description" aria-controls="home" role="tab">Description</a></li>
+				{% endif %}
+				{% if stories %}
+				<li role="presentation"{% if not histories and not descriptions %}class="active"{% endif %}><a href="#story" aria-controls="home" role="tab">Stories</a></li>
+				{% endif %}
+				
 			</ul>
 		</div>
 	</div>
 	<div class="row">
 		<div class="col-md-3" id="fixed-nav">
 			<ul data-spy="affix" data-offset-top="300" data-offset-bottom="0" class="nav nav-stacked hidden-sm hidden-xs">
-				{% for document in histories %}
-					{% if document.start_year %}
-						<li><a href="#{{ document.title|slugify }}">{{ document.title }}<br /><span class="small">{{ document.start_year }} - {{ document.end_year }}</span></a></li>
-					{% else %}
-						<li><a href="#{{ document.title|slugify }}">{{ document.title }}</span></a></li>
-					{% endif %}
-				{% endfor %}
+			{% if histories %}
+				{% if not stories or not descriptions %}
+					{% for document in histories %}
+						{% if document.start_year %}
+							<li><a href="#{{ document.title|slugify }}">{{ document.title }}<br /><span class="small">{{ document.start_year }} - {{ document.end_year }}</span></a></li>
+						{% else %}
+							<li><a href="#{{ document.title|slugify }}">{{ document.title }}</span></a></li>
+						{% endif %}
+					{% endfor %}
+				{% endif %}
+			{% endif %}
+			{% if descriptions %}
+				{% if not histories %}
+					{% for document in descriptions %}
+						{% if document.start_year %}
+							<li><a href="#{{ document.title|slugify }}">{{ document.title }}<br /><span class="small">{{ document.start_year }} - {{ document.end_year }}</span></a></li>
+						{% else %}
+							<li><a href="#{{ document.title|slugify }}">{{ document.title }}</span></a></li>
+						{% endif %}
+					{% endfor %}
+				{% endif %}
+			{% endif %}
+			{% if stories %}
+				{% if not histories and not descriptions %}
+					{% for document in stories %}
+						{% if document.start_year %}
+							<li><a href="#{{ document.title|slugify }}">{{ document.title }}<br /><span class="small">{{ document.start_year }} - {{ document.end_year }}</span></a></li>
+						{% else %}
+							<li><a href="#{{ document.title|slugify }}">{{ document.title }}</span></a></li>
+						{% endif %}
+					{% endfor %}
+				{% endif %}
+			{% endif %}
 			</ul>
 		</div>
 		<div class="col-xs-12 col-md-7 feature-detail">
 			<div class="tab-content">
-				<div role="tabpanel" class="tab-pane active" id="history">
+				<div role="tabpanel" class="tab-pane {% if not stories or not descriptions %}active{% endif %}" id="history">
 				{% for document in histories %}
 					<div>
 						<span id="{{ document.title|slugify }}" class="detail_anchor"></span>
@@ -51,14 +83,24 @@
 					</div>				
 				{% endfor %}
 				</div>
-				<div role="tabpanel" class="tab-pane" id="description">
-			{% for document in descriptions %}
+				<div role="tabpanel" class="tab-pane {% if not histories  %}active{% endif %}" id="description">
+				{% for document in descriptions %}
 					<div>
 						<span id="{{ document.title|slugify }}" class="detail_anchor"></span>
 						<h2>{{ document.title }}</h2>
 						{{ document.body|safe }}
 					</div>	
-			{% endfor %}
+				{% endfor %}
+				</div>
+				<div role="tabpanel" class="tab-pane {% if not histories and not descriptions %}active{% endif %}" id="story">
+				{% for document in stories %}
+					<div>
+						<span id="{{ document.title|slugify }}" class="detail_anchor"></span>
+						<h2>{{ document.title }}</h2>
+						<h2><span class="small">{% if document.author.first_name and document.author.last_name %}{{ document.author.first_name }} {{ document.author.last_name }}{% else %}{{ document.author }}{% endif %}</span></h2>
+						{{ document.body|safe }}
+					</div>	
+				{% endfor %}
 				</div>
 			</div>
 		</div>
@@ -127,6 +169,8 @@
 
 	var descriptionNav = '{% for document in descriptions %}{% if document.start_year %}<li><a href="#{{ document.title|slugify }}">{{ document.start_year }} - {{ document.end_year }}<br /><span class="small">{{ document.title }}</span></a></li>{% else %}<li><a href="#{{ document.title|slugify }}">{{ document.title }}</span></a></li>{% endif %}{% endfor %}';
 
+	var storyNav = '{% for document in stories %}{% if document.start_year %}<li><a href="#{{ document.title|slugify }}">{{ document.start_year }} - {{ document.end_year }}<br /><span class="small">{{ document.title }}</span></a></li>{% else %}<li><a href="#{{ document.title|slugify }}">{{ document.title }}</span></a></li>{% endif %}{% endfor %}';
+
 	$('#docTabs a').click(function(e) {
 		e.preventDefault();
 		$(this).tab('show');
@@ -134,8 +178,9 @@
 			$('#fixed-nav ul').html(descriptionNav);
 		} else if ($(this).html() == 'History') {
 			$('#fixed-nav ul').html(historyNav);
+		} else if ($(this).html() == 'Stories') {
+			$('#fixed-nav ul').html(storyNav);
 		}
-
 	})
 
 	// Enable link to tab
