--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -20,7 +20,7 @@
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
             <div>
                 <a href="{% url 'map.views.detail' result.object.id %}"><img src="/media/{{ result.object.thumbnail }}"></a>
-                <p><a href="{% url 'map.views.detail' result.object.id %}">{{ result.object.name }}</a></p>
+                <p><a href="{% url 'map.views.detail' result.object.id %}">{{ result.object.b_name }}</a></p>
             </div>
         </div>
     
