--- a/templates/whitechapel_pages/index.html
+++ b/templates/whitechapel_pages/index.html
@@ -13,12 +13,12 @@
 	</div>
 </div>
 
-<!--<div class="container">
+<div class="container">
 	<div class="col-xs-12">
 		<h2 class="text-center">{{ page.title }}</h2>
 		{{ page.body|safe }}
 	</div>
-</div>-->
+</div>
 <div class="container">
 
 	<div class="row">
@@ -33,7 +33,7 @@
 		<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
 			<div>
 				<a href="{% url 'map.views.detail' feature.id %}"><img src="/media/{{ feature.thumbnail }}"></a>
-				<p><a href="{% url 'map.views.detail' feature.id %}">{{ feature.name }}</a></p>
+				<p><a href="{% url 'map.views.detail' feature.id %}">{{ feature.b_name }}</a></p>
 			</div>
 		</div>
 		{% endfor %}
