--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -10,6 +10,10 @@ p, .infobox-control p {
 	line-height: 33px;
 	margin-bottom: 43px;
 }
+.content li {
+	font-size: 21px;
+	line-height: 33px;
+}
 ul {
 	font-family: Georgia;
 }
@@ -191,4 +195,20 @@ footer {
 }
 .tag {
 	margin-bottom: 3px;
+}
+form#document_form .form-control {
+	border: 0;
+	border-radius: 0;
+	box-shadow: none;
+	font-size: 21px;
+}
+
+form#document_form #id_title {
+	font-size: 30px;
+	height: 45px;
+}
+
+form#document_form label {
+	font-size: 30px;
+	font-weight: normal;
 }
