Stupid footnotes. Halfway there with them, but still work to do - see regex in document.save()

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -203,6 +203,10 @@ form#document_form .form-control {
 	font-size: 21px;
 }
 
+form#document_form {
+	margin-bottom: 50px;
+}
+
 form#document_form #id_title {
 	font-size: 30px;
 	height: 45px;
