--- a/templates/map/base.html
+++ b/templates/map/base.html
@@ -47,6 +47,11 @@
 		</nav>
 
 		{% block content %}{% endblock %}
-
+		{% block footer %}
+		<footer class="row">
+			<div class="col-xs-12 col-md-12">
+			</div>
+		</footer>
+		{% endblock %}
 	</body>
 </html>
